# cri

cri/: cri.cabal
cri-haskell-sprng/: cri-haskell-sprng.cabal
cri-haskell-sprng/src/Random/CRI/: SPRNG.hs
cri-lfg/: cri-lfg.cabal
cri-lfg/src/Random/CRI/: LFG.hs
cri-mersenne-random-pure64/: cri-mersenne-random-pure64.cabal
cri-mersenne-random-pure64/src/Random/CRI/: PureMT.hs
cri-mwc-random/: cri-mwc-random.cabal
cri-mwc-random/src/Random/CRI/: MWC.hs
cri-random/: LICENSE  cri-random.cabal
cri-random/src/Random/CRI/: StdGen.hs
cri/src/Random/: CRI.hs
cri/src/Random/CRI/: MWC.hs  Source.hs  StdGen.hs  Utils.hs
doc/: overview.txt
src/Random/CRI/: Base.hs  Generates.hs  LFG.hs  PureMT.hs  Random.hs  Source.hs  StdGen.hs
